--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bluebird": "^3.4.1",
     "jsonpath": "~0.2.2",
+    "lodash": "^4.15.0",
     "uuid": "~2.0.1"
   },
   "optionalDependencies": {
